<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerSingUpActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/customersingup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="60dp"
        android:text="Customers"
        android:textColor="#fff"
        android:textSize="70sp"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customersingup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="0dp"
        android:text="sign up"
        android:textColor="#fff"
        android:textSize="30sp"  />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/nameCustomers"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColor="#fff"
            android:autofillHints=""
            android:textColorHint="#fff"
            android:inputType="text" />

        <EditText
            android:id="@+id/mailCustomers"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:autofillHints=""
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passCustomers"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:autofillHints=""
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signUpCustomers"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="#fff"/>

        <TextView
            android:id="@+id/toSignInCustomers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account_sign_in"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_gravity="center"/>

    </LinearLayout>



</RelativeLayout>