<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverSignUpActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/driversignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="60dp"
        android:text="Drivers"
        android:textColor="#fff"
        android:textSize="70sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driversignup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="0dp"
        android:textColor="#fff"
        android:text="sign up"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/nameDrivers"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="230dp"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/mailDrivers"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="110dp"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passDrivers"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="170dp"
        android:autofillHints=""
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signUpDrivers"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/toSignInDrivers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account_sign_in"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>